builds/tests/246/data/attachments/b08e078f95181551.txt
2026-05-30 07:13:34,249 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-05-30 07:13:34,249 INFO     yoyo.migrations —  - applying step 0
2026-05-30 07:13:34,250 INFO     yoyo.migrations —  - applying step 1
2026-05-30 07:13:34,250 INFO     yoyo.migrations —  - applying step 2
2026-05-30 07:13:34,250 INFO     yoyo.migrations —  - applying step 3
2026-05-30 07:13:34,250 INFO     yoyo.migrations —  - applying step 4
2026-05-30 07:13:34,251 INFO     yoyo.migrations —  - applying step 5
2026-05-30 07:13:34,251 INFO     yoyo.migrations —  - applying step 6
2026-05-30 07:13:34,251 INFO     yoyo.migrations —  - applying step 7
2026-05-30 07:13:34,251 INFO     yoyo.migrations —  - applying step 8
2026-05-30 07:13:34,251 INFO     yoyo.migrations —  - applying step 9
2026-05-30 07:13:34,252 INFO     yoyo.migrations —  - applying step 10
2026-05-30 07:13:34,252 INFO     yoyo.migrations —  - applying step 11
2026-05-30 07:13:34,252 INFO     yoyo.migrations —  - applying step 12
2026-05-30 07:13:34,252 INFO     yoyo.migrations —  - applying step 13
2026-05-30 07:13:34,253 INFO     yoyo.migrations —  - applying step 14
2026-05-30 07:13:34,255 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-05-30 07:13:34,256 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-05-30 07:13:34,257 INFO     yoyo.migrations —  - applying step 0
2026-05-30 07:13:34,257 INFO     yoyo.migrations —  - applying step 1
2026-05-30 07:13:34,259 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-05-30 07:13:34,260 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-05-30 07:13:34,261 INFO     yoyo.migrations —  - applying step 0
2026-05-30 07:13:34,263 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-05-30 07:13:34,264 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-05-30 07:13:34,264 INFO     yoyo.migrations —  - applying step 0
2026-05-30 07:13:34,264 INFO     yoyo.migrations —  - applying step 1
2026-05-30 07:13:34,265 INFO     yoyo.migrations —  - applying step 2
2026-05-30 07:13:34,265 INFO     yoyo.migrations —  - applying step 3
2026-05-30 07:13:34,265 INFO     yoyo.migrations —  - applying step 4
2026-05-30 07:13:34,265 INFO     yoyo.migrations —  - applying step 5
2026-05-30 07:13:34,266 INFO     yoyo.migrations —  - applying step 6
2026-05-30 07:13:34,266 INFO     yoyo.migrations —  - applying step 7
2026-05-30 07:13:34,266 INFO     yoyo.migrations —  - applying step 8
2026-05-30 07:13:34,267 INFO     yoyo.migrations —  - applying step 9
2026-05-30 07:13:34,267 INFO     yoyo.migrations —  - applying step 10
2026-05-30 07:13:34,267 INFO     yoyo.migrations —  - applying step 11
2026-05-30 07:13:34,267 INFO     yoyo.migrations —  - applying step 12
2026-05-30 07:13:34,268 INFO     yoyo.migrations —  - applying step 13
2026-05-30 07:13:34,268 INFO     yoyo.migrations —  - applying step 14
2026-05-30 07:13:34,268 INFO     yoyo.migrations —  - applying step 15
2026-05-30 07:13:34,269 INFO     yoyo.migrations —  - applying step 16
2026-05-30 07:13:34,269 INFO     yoyo.migrations —  - applying step 17
2026-05-30 07:13:34,270 INFO     yoyo.migrations —  - applying step 18
2026-05-30 07:13:34,270 INFO     yoyo.migrations —  - applying step 19
2026-05-30 07:13:34,270 INFO     yoyo.migrations —  - applying step 20
2026-05-30 07:13:34,270 INFO     yoyo.migrations —  - applying step 21
2026-05-30 07:13:34,270 INFO     yoyo.migrations —  - applying step 22
2026-05-30 07:13:34,273 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-05-30 07:13:34,274 INFO     yoyo.migrations — Applying 0005_income_logging
2026-05-30 07:13:34,275 INFO     yoyo.migrations —  - applying step 0
2026-05-30 07:13:34,275 INFO     yoyo.migrations —  - applying step 1
2026-05-30 07:13:34,275 INFO     yoyo.migrations —  - applying step 2
2026-05-30 07:13:34,275 INFO     yoyo.migrations —  - applying step 3
2026-05-30 07:13:34,276 INFO     yoyo.migrations —  - applying step 4
2026-05-30 07:13:34,277 INFO     yoyo.migrations —  - applying step 5
2026-05-30 07:13:34,277 INFO     yoyo.migrations —  - applying step 6
2026-05-30 07:13:34,277 INFO     yoyo.migrations —  - applying step 7
2026-05-30 07:13:34,277 INFO     yoyo.migrations —  - applying step 8
2026-05-30 07:13:34,278 INFO     yoyo.migrations —  - applying step 9
2026-05-30 07:13:34,278 INFO     yoyo.migrations —  - applying step 10
2026-05-30 07:13:34,278 INFO     yoyo.migrations —  - applying step 11
2026-05-30 07:13:34,278 INFO     yoyo.migrations —  - applying step 12
2026-05-30 07:13:34,278 INFO     yoyo.migrations —  - applying step 13
2026-05-30 07:13:34,278 INFO     yoyo.migrations —  - applying step 14
2026-05-30 07:13:34,279 INFO     yoyo.migrations —  - applying step 15
2026-05-30 07:13:34,279 INFO     yoyo.migrations —  - applying step 16
2026-05-30 07:13:34,279 INFO     yoyo.migrations —  - applying step 17
2026-05-30 07:13:34,279 INFO     yoyo.migrations —  - applying step 18
2026-05-30 07:13:34,279 INFO     yoyo.migrations —  - applying step 19
2026-05-30 07:13:34,279 INFO     yoyo.migrations —  - applying step 20
2026-05-30 07:13:34,280 INFO     yoyo.migrations —  - applying step 21
2026-05-30 07:13:34,280 INFO     yoyo.migrations —  - applying step 22
2026-05-30 07:13:34,280 INFO     yoyo.migrations —  - applying step 23
2026-05-30 07:13:34,280 INFO     yoyo.migrations —  - applying step 24
2026-05-30 07:13:34,280 INFO     yoyo.migrations —  - applying step 25
2026-05-30 07:13:34,280 INFO     yoyo.migrations —  - applying step 26
2026-05-30 07:13:34,281 INFO     yoyo.migrations —  - applying step 27
2026-05-30 07:13:34,281 INFO     yoyo.migrations —  - applying step 28
2026-05-30 07:13:34,281 INFO     yoyo.migrations —  - applying step 29
2026-05-30 07:13:34,281 INFO     yoyo.migrations —  - applying step 30
2026-05-30 07:13:34,281 INFO     yoyo.migrations —  - applying step 31
2026-05-30 07:13:34,282 INFO     yoyo.migrations —  - applying step 32
2026-05-30 07:13:34,282 INFO     yoyo.migrations —  - applying step 33
2026-05-30 07:13:34,285 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-05-30 07:13:34,293 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-05-30 07:13:34,294 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 175, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/asyncio/threads.py", line 25, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.13/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 397, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
